@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libfdata.dll\0"
       VALUE "ProductName",		"libfdata\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libfdata/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libfdata/\0"
     END
   END
   BLOCK "VarFileInfo"
